route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: tekton-github-route
  namespace: atos-development
  labels:
    app.kubernetes.io/managed-by: EventListener
    app.kubernetes.io/part-of: Triggers
    eventlistener: github-listener-interceptor
spec:
  path: /hooks
  to:
    kind: Service
    name: el-github-listener-interceptor
    weight: 100
  port:
    targetPort: http-listener
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: None
  wildcardPolicy: None
